syntax = "proto3";

option csharp_namespace = "GrpcClientApp";

package customers;

service Customer{
	rpc GetCustomerInfo (CustomerFindModel) returns (CustomerDataModel);
	rpc GetAllCustomers (AllCustomerModel) returns (stream CustomerDataModel);
}

message AllCustomerModel {

}

//message is like a model
message CustomerFindModel {
  //int32, bool, string, float, double
  int32 userId = 1;
}

// The response message containing the greetings.
message CustomerDataModel {
  string firstName = 1;
  string lastName = 2;
}
